add api delete block
